--- a/docker_example/docker-compose.yml
+++ b/docker_example/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   langflow:
-    image: langflowai/langflow:latest # or another version tag on https://hub.docker.com/r/langflowai/langflow
+    image: langflowai/langflow:1.3.2 # or another version tag on https://hub.docker.com/r/langflowai/langflow
     pull_policy: always               # set to 'always' when using 'latest' image
     depends_on:
       - postgres
